--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,9 @@ body, html {
   margin: 0 auto;
   display: block;
   text-align: center;
+  background-image: url("./image/white-wood.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .container, h1 {
@@ -26,15 +29,28 @@ h4 {
   border: 1px solid #22aa44;
   box-shadow:  -1px 1px #22aa44, -2px 2px #22aa44, -3px 3px #22aa44, -4px 4px #22aa44, -5px 5px #22aa44;
   background-color: #44cc66;
+}
 
+#amaible {
+  background: linear-gradient(to left,#22aa44 , #113322)
 }
 
 .indifferent {
   background-color: #dddd22;
+ box-shadow:  -1px 1px #dddd22, -2px 2px #dddd22, -3px 3px #dddd22, -4px 4px #dddd22, -5px 5px #dddd22;
 }
 
+#indifferent {
+  background: linear-gradient(to left,#dddd22 , #113322)
+  
+}
 .dubious {
   background-color: #dd4444;
+   box-shadow:  -1px 1px #dd4444, -2px 2px #dd4444, -3px 3px #dd4444, -4px 4px #dd4444, -5px 5px #dd4444;
+}
+
+#dubious {
+  background: linear-gradient(to left,#dd4444 , #113322)
 }
 
 .column {
