--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,9 @@ body, html {
   margin: 0 auto;
   display: block;
   text-align: center;
+  background-image: url('../images/white-wood.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .container, h1 {
